--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "devDependencies": {
+    "mocha": "",
+    "should": "",
+    "coffee-script": ""
+  },
   "author": "Erik Fonsan Fonselius",
   "license": "ISC"
 }
